2007-07-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ws2tcpip.h (s6_addr32): Correct definition.
	Thanks to Alfred E. Heggestad <aeh at db dot org>

2007-05-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/secur32.def (InitSecurityInterfaceA, InitSecurityInterfaceW): Define.

	Thanks to Jim Marshall (jim dot marshall at wbemsolutions dot com) for
	supplying the information.

2007-05-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shellapi.h (NIN_POPUPOPEN, NIN_POPUPCLOSE): Define.

2007-04-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shellapi.h (NOTIFYICONDATAA, NOTIFYICONDATAW): Updated to support
	Vista.

2007-04-20  Matthias Miller  <matthiasmiller@users.sourceforge.net>

	 * include/wincrypt.h (CRYPTPROTECT_PROMPTSTRUCT, CRYPTPROTECT_UI_FORBIDDEN,
	CRYPTPROTECT_LOCAL_MACHINE): Define.

2007-04-15  Piotr Wyderski  <piotr.wyderski@wp.pl>

	* include/winbase.h (SetInformationJobObject, QueryInformationJobObject):
	Define.

2007-03-30  Brian Dessent  <brian@dessent.net>

	* lib/kernel32.def (CreateMemoryResourceNotification@4): Define.

2007-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.9.
	* Makefile.in: Ditto.

2007-03-23  Corinna Vinschen  <corinna@vinschen.de>

	* include/psapi.h (GetMappedFileName): Fix messed up checkin.

2007-03-23  Matthew Gregan  <kinetik@flim.org>

	* include/psapi.h (GetMappedFileName): Rename from GetMappedFilenameEx.

2007-03-06  Brandon Sneed <brandon@oqo.com>

	* include/setupapi.h: Added SetupConfigureWmiFromInfSectionA
	Added SetupConfigureWmiFromInfSectionW
	Added SetupConfigureWmiFromInfSection define to unicode and non-unicode sections

	* lib/setupapi.def: Added exports for SetupConfigureWmiFromInfSectionA and W

	* include/winuser.h: Added PBT_APMQUERYSUSPEND
	Added PBT_APMQUERYSTANDBY
	Added PBT_APMQUERYSUSPENDFAILED
	Added PBT_APMQUERYSTANDBYFAILED
	Added PBT_APMSUSPEND
	Added PBT_APMSTANDBY